person-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: person-service
spec:
  type: ClusterIP
  selector:
    app: person-service
  ports:
    - port: 80
      targetPort: 80
